# LangChain_RAG

./: .env.example  .gitignore  README.md  data-fetch.sh  health_check.py  pyproject.toml  requirements.txt
.github/workflows/: kaggle-train.yml
app/: api.py  demo.py
claude/: CLAUDE.md
detector/: __init__.py  inference.py  transform.py
detector/data/: __init__.py  class.py  dataset.py  loaders.py  ood_split.py
detector/models/: __init__.py  resnet_finetune.py  simple_cnn.py
detector/training/: __init__.py  loop.py  run.py
docs/: 01-getting-started.md  02-project-structure.md  03-dataset-design.md  04-dataloader-split.md
kaggle/: kernel-metadata.json  kernel_entry.py
models/: cifake_resnet18.metrics.json
scripts/: eval.py  predict.py  split_ood.py  train.py  train_mixed.py
tests/: test_cnn.py  test_data.py  test_loader.py
